<resources>
    <string name="app_name">词典管理器</string>
    <string name="btn_gboard_statement">需要root权限</string>
    <string name="request_permission">去授权</string>
    <string name="td_baidu">百度在线词库</string>
    <string name="td_gboard">本地Gboard词库</string>
    <string name="td_sogou">搜狗在线词库</string>
    <string name="td_statement">声明：本资料仅供学习和交流</string>
    <string name="td_user_dictionary">本地用户词库</string>
    <string name="td_user_dictionary_statement">本地用户词库</string>
    <string name="td_xunfei">讯飞在线词库</string>
    <string name="tq_ime_permission">启用输入法设置</string>
    <string name="tq_ime_permission_statement">应用需要访问并修改您的用户词典。请授权允许访问。</string>
    <string name="tq_notification_permission">通知权限</string>
    <string name="tq_notification_permission_statement">为了在下载和导入过程中显示进度，请允许应用发送通知。</string>
    <string name="menu_dictionary_add">添加</string>
    <string name="menu_dictionary_edit">编辑</string>
    <string name="menu_dictionary_clean">清空</string>
    <string name="menu_dictionary_import">导入</string>
    <string name="menu_dictionary_export">导出</string>
    <string name="menu_dictionary_search">搜索</string>
    <string name="menu_dictionary_clean_all">清空所有词库</string>
    <string name="td_all_languages">所有语言</string>
    <string name="btn_item_dictionary_index_install">安装</string>
    <string name="dialog_clean_all_title">删除</string>
    <string name="dialog_clean_all_message">您确定要删除所有项吗？</string>
    <string name="dialog_clean_all_yes">是</string>
    <string name="dialog_clean_all_no">否</string>
    <string name="dialog_dev_titile">开发中</string>
    <string name="dialog_dev_message">该功能正在开发中，敬请期待！</string>
    <string name="dialog_yes">确定</string>
    <string name="notification_task_complete">添加完成</string>
    <string name="notification_task_start">正在添加到词库...</string>
    <string name="notification_task_exception">无法解析该文件:\n%1$s</string>
    <string name="notification_task_parser">正在解析文件...</string>
    <string name="notification_name">任务进度</string>
    <string name="notification_description">用于在下载和导入过程中显示进度</string>
    <string name="dialog_add_word_error_message">单词不能为空</string>
    <string name="dialog_add_error_titile">添加失败</string>
    <string name="dialog_add_frequency_error_message">频率参数错误 他是介于 1 和 255 之间的值</string>
    <string name="td_edit_word_statement">单词</string>
    <string name="td_edit_word">单词</string>
    <string name="td_edit_shortcut_statement">此单词的可选快捷方式。键入快捷方式时，支持的输入法也应建议此行中的单词作为替代拼写。</string>
    <string name="td_edit_shortcut">快捷方式</string>
    <string name="td_edit_frequency_statement">此单词的显示频率，值范围为 1 到 255。值越高，频率越高。</string>
    <string name="td_edit_frequency">频率</string>
    <string name="td_edit_locale_statement">此单词所属的区域设置。如果它与所有区域设置相关，则为 null。区域设置由 Locale.toString() 返回的字符串定义。</string>
    <string name="td_edit_locale">区域设置</string>
    <string name="td_edit_appid_statement">插入单词的应用程序的 uid</string>
    <string name="td_edit_appid">应用程序 ID</string>
    <string name="td_edit_save">保存</string>
    <string name="td_edit_delete">删除</string>
    <string name="title_activity_main">MainActivity</string>

</resources>