<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_add"
        android:icon="@drawable/add_24px"
        android:title="@string/menu_dictionary_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/search_bar"
        android:icon="@drawable/search_24px"
        android:title="@string/menu_dictionary_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_import"
        android:title="@string/menu_dictionary_import" />
    <item
        android:id="@+id/item_export"
        android:title="@string/menu_dictionary_export" />
    <item
        android:id="@+id/item_clean"
        android:icon="@drawable/add_24px"
        android:title="@string/menu_dictionary_clean" />
</menu>