<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ime_permission_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tq_ime_permission"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tq_ime_permission_statement"
                    android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

            </LinearLayout>


            <Button
                android:id="@+id/ime_request_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/request_permission"
                android:theme="@style/Widget.Material3.Button.OutlinedButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notification_permission_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tq_notification_permission"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tq_notification_permission_statement"
                    android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

            </LinearLayout>


            <Button
                android:id="@+id/notification_request_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/request_permission"
                android:theme="@style/Widget.Material3.Button.OutlinedButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_user_dictionary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_user_dictionary"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_user_dictionary_statement"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_gboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_gboard"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_gboard_statement"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_sogou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_sogou"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_statement"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_xunfei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_xunfei"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_statement"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_baidu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_baidu"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td_statement"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

        </LinearLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
